--- a/src/style/SearchPage.css
+++ b/src/style/SearchPage.css
@@ -1,3 +1,11 @@
+.loader-box {
+  display: flex;
+  justify-content: center;
+  align-content: start;
+  width: 100%;
+  height: 100vh;
+}
+
 .track-list {
   justify-content: center;
   margin: 30px;
@@ -5,5 +13,5 @@
 
 div.heading{
   text-align:center;
-
+  font-size: 1.2em;
 }
