--- a/src/style/SongInfoPage.css
+++ b/src/style/SongInfoPage.css
@@ -1,9 +1,15 @@
 section.song-description {
-  background-color: rgba(218, 241, 100, 0.5);
+  background-color: #fff;
   padding: 15px;
   display: flex;
   align-items: center;
   height: 45vh;
+}
+
+section.media {
+  background-color: rgba(218, 241, 100, 0.5);
+  display: flex;
+  align-items: flex-end;
 }
 
 img {
@@ -28,7 +34,11 @@ div.details {
   padding: 10px;
 }
 .meta {
-  margin-bottom: 5px;
+  margin-bottom: 8px;
+}
+
+.meta.description{
+  font-weight: 300;
 }
 
 .loader-box {
@@ -41,4 +51,17 @@ div.details {
 
 .youtube {
   margin: 30px;
+}
+
+.lyrics-link {
+  margin: 30px;
+}
+
+.lyrics-link:hover{
+  color:rgb(146, 150, 8);
+}
+
+span.subheading {
+  margin-right: 5px;
+  font-weight: 600;
 }
